Day Two NLW - Map Half Through

--- a/_public/_css/animations.css
+++ b/_public/_css/animations.css
@@ -17,3 +17,20 @@
     animation-duration: 300ms;
     animation-fill-mode: backwards;
 }
+
+@keyframes right{
+    from{
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.lateral-bar{
+    animation-name: right;
+    animation-duration: 500ms;
+    animation-fill-mode: backwards;
+}
