--- a/_public/_css/animations.css
+++ b/_public/_css/animations.css
@@ -34,3 +34,18 @@
     animation-duration: 500ms;
     animation-fill-mode: backwards;
 }
+
+@keyframes appear{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.animate-appear{
+    animation-name: appear;
+    animation-duration: 300ms;
+    animation-fill-mode: backwards;
+}
