--- a/_public/_css/orphanages.css
+++ b/_public/_css/orphanages.css
@@ -95,6 +95,8 @@ footer p{
     box-shadow: 1rem 1rem 2rem rgba(0, 0, 0, .2);
     border-radius: 12px;
 
+    margin-left: 1rem;
+
     display: flex;
     align-items: center;
     justify-content: center;
