--- a/_public/_css/orphanage.css
+++ b/_public/_css/orphanage.css
@@ -106,7 +106,7 @@ h1, h2{
 p{
     color: #5C8599;
     font-size: 1.8rem;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .map-container{
@@ -158,22 +158,33 @@ hr{
 }
 .box img{
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 7rem;
+}
+.box p{
+    margin-bottom: 1rem;
+    font-size: 2rem;
 }
 #hour{
     background: linear-gradient(149.97deg, #E6F7FB 8.13%, #FFFFFF 92.67%);
     border: 1px solid #B3DAE2;
 }
 #hour p{
-    color: 5C8599;
+    color: #5C8599;
 }
 
-#weekend{
+#weekend.open{
     background: linear-gradient(154.16deg, #EDFFF6 7.85%, #FFFFFF 91.03%);
     border: 1px solid #A1E9C5;
 }
-#weekend p{
+#weekend.open p{
     color: #37C77F;
+}
+#weekend.close{
+    background: linear-gradient(154.16deg, #FFE4EE 7.85%, #FFFFFF 91.03%);
+    border: 1px solid #ffc9ce;
+}
+#weekend.close p{
+    color: #ff3e52;
 }
 
 .whatsapp{
@@ -191,6 +202,7 @@ hr{
     
     color: white;
     font-weight: bold;
+    text-decoration: none;
 
     transition: background 200ms;
 }
