--- a/src/views/form.hbs
+++ b/src/views/form.hbs
@@ -38,13 +38,13 @@
       </aside>
 
       <main class="animate-appear with-sidebar">
-        <form class="form-details">
+        <form class="form-details" method="post" action="save-orphanage" onsubmit="validate(event)">
           <h2>Dados</h2>
           <hr />
 
           <div class="map-container">
-            <input type="hidden" name="lat" />
-            <input type="hidden" name="lng" />
+            <input type="hidden" name="lat" id="lat"/>
+            <input type="hidden" name="lng" id="lng"/>
             <div id="mapid"></div>
 
             <div id="anchor-container">
@@ -77,7 +77,7 @@
             <div class="images-new">
               <legend>Fotos</legend>
               <div class="new-upload">
-                <input type="text" name="fotos"/>
+                <input type="url" name="fotos"/>
                 <span onclick="DeleteField(event)"
                   ><img
                     src="/_images/x-circle.svg"
