Social Media Fix

--- a/src/views/form.hbs
+++ b/src/views/form.hbs
@@ -151,8 +151,8 @@
             </div>
             <input
               type="hidden"
-              id="open-on-weekends"
-              name="open-on-weekends"
+              id="open_on_weekends"
+              name="open_on_weekends"
               value="1"
               required
             />
