--- a/src/views/form.hbs
+++ b/src/views/form.hbs
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="page-form">
-      <aside>
+      <aside class="lateral-bar">
         <img src="/_images/map-marker.svg" alt="Happy Logo" />
 
         <footer>
