--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div id="page-orphanages">
-      <aside class="lateral-bar">
+      <aside>
         <header>
           <img src="/_images/map-marker.svg" alt="Logo Happy" />
           <h1>Escolha um orfanato no mapa</h1>
